--- a/gb/20/2/27/n11899859.md
+++ b/gb/20/2/27/n11899859.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kjrkiz2594/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kjrkiz2594/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kjrkiz2594/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kjrkiz2594/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kjrkiz2594/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kjrkiz2594/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kjrkiz2594/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kjrkiz2594/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/kjrkiz2594/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/kjrkiz2594/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kjrkiz2594/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kjrkiz2594/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kjrkiz2594/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hjtdvm325/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hjtdvm325/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hjtdvm325/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hjtdvm325/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hjtdvm325/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hjtdvm325/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hjtdvm325/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hjtdvm325/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hjtdvm325/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hjtdvm325/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hjtdvm325/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hjtdvm325/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hjtdvm325/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hjtdvm325/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hjtdvm325/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hjtdvm325/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hjtdvm325/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hjtdvm325/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hjtdvm325/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hjtdvm325/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hjtdvm325/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hjtdvm325/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hjtdvm325/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hjtdvm325/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hjtdvm325/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hjtdvm325/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hjtdvm325/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hjtdvm325/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hjtdvm325/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hjtdvm325/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hjtdvm325/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hjtdvm325/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hjtdvm325/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hjtdvm325/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hjtdvm325/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hjtdvm325/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hjtdvm325/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hjtdvm325/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hjtdvm325/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hjtdvm325/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hjtdvm325/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hjtdvm325/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hjtdvm325/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hjtdvm325/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hjtdvm325/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hjtdvm325/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hjtdvm325/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>成本未定 素里警局过渡或延迟</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2020年02月27日讯】（记者王昱莎综合报导）<a href="https://github.com/kjrkiz2594/djy/blob/master/gb/tag/%E7%B4%A0%E9%87%8C.md">素里</a>警局<a href="https://github.com/kjrkiz2594/djy/blob/master/gb/tag/%E8%BF%87%E6%B8%A1.md">过渡</a>委员会主席、前卑省司法厅长欧博理（Wally Oppal）于周三（2月26日）在素里贸易委员会（Surrey’s Board of Trade）早餐会上透露，素里警局过渡的最后期限可能延后，在原计划的2021年4月前完成过渡不太现实。</p>
-<p>欧博理周三向有关<a href="https://github.com/kjrkiz2594/djy/blob/master/gb/tag/%E7%B4%A0%E9%87%8C.md">素里</a><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/tag/%E9%AA%91%E8%AD%A6.md">骑警</a><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/tag/%E8%BF%87%E6%B8%A1.md">过渡</a>至<a href="https://github.com/kjrkiz2594/djy/blob/master/gb/tag/%E5%B8%82%E8%AD%A6.md">市警</a>的调查报告，这份450页的报告目前尚未公布。周三向素里贸易委员会提交调查结果。报告还将提交给省警队服务总监Brenda Butterworth-Carr 和公共安全厅长范和富（Mike Farnworth）。</p>
-<p>据CBC报导，欧博理承认素里市成立自己的警察局将拥有更多的地区控制权，但<a href="https://github.com/kjrkiz2594/djy/blob/master/gb/tag/%E6%88%90%E6%9C%AC.md">成本</a>可能超过目前雇佣加拿大<a href="https://github.com/kjrkiz2594/djy/blob/master/gb/tag/%E9%AA%91%E8%AD%A6.md">骑警</a>的成本。他表示，由于成本分析还未完成，暂时无法透露详情。</p>
+<p>【大纪元2020年02月27日讯】（记者王昱莎综合报导）<ahref="https://github.com/hjtdvm325/djy/blob/master/gb/tag/%E7%B4%A0%E9%87%8C.md#1">素里</a>警局<ahref="https://github.com/hjtdvm325/djy/blob/master/gb/tag/%E8%BF%87%E6%B8%A1.md#1">过渡</a>委员会主席、前卑省司法厅长欧博理（Wally Oppal）于周三（2月26日）在素里贸易委员会（Surrey’s Board of Trade）早餐会上透露，素里警局过渡的最后期限可能延后，在原计划的2021年4月前完成过渡不太现实。</p>
+<p>欧博理周三向有关<ahref="https://github.com/hjtdvm325/djy/blob/master/gb/tag/%E7%B4%A0%E9%87%8C.md#1">素里</a><ahref="https://github.com/hjtdvm325/djy/blob/master/gb/tag/%E9%AA%91%E8%AD%A6.md#1">骑警</a><ahref="https://github.com/hjtdvm325/djy/blob/master/gb/tag/%E8%BF%87%E6%B8%A1.md#1">过渡</a>至<ahref="https://github.com/hjtdvm325/djy/blob/master/gb/tag/%E5%B8%82%E8%AD%A6.md#1">市警</a>的调查报告，这份450页的报告目前尚未公布。周三向素里贸易委员会提交调查结果。报告还将提交给省警队服务总监Brenda Butterworth-Carr 和公共安全厅长范和富（Mike Farnworth）。</p>
+<p>据CBC报导，欧博理承认素里市成立自己的警察局将拥有更多的地区控制权，但<ahref="https://github.com/hjtdvm325/djy/blob/master/gb/tag/%E6%88%90%E6%9C%AC.md#1">成本</a>可能超过目前雇佣加拿大<ahref="https://github.com/hjtdvm325/djy/blob/master/gb/tag/%E9%AA%91%E8%AD%A6.md#1">骑警</a>的成本。他表示，由于成本分析还未完成，暂时无法透露详情。</p>
 <p>他表示，一个大问题是训练警员的卑诗省司法学院目前已经满载，尚不知道有多少加拿大骑警决定加入市政警队。</p>
-<p>据此前的估算，用<a href="https://github.com/kjrkiz2594/djy/blob/master/gb/tag/%E5%B8%82%E8%AD%A6.md">市警</a>取代加拿大骑警后，素里市府每年将多出1.5亿加元左右的开销。素里居民担心成立全新的警务服务是否会给纳税人带来更多的经济压力？而未来新的警力能否满足本地需求还是未知数。</p>
+<p>据此前的估算，用<ahref="https://github.com/hjtdvm325/djy/blob/master/gb/tag/%E5%B8%82%E8%AD%A6.md#1">市警</a>取代加拿大骑警后，素里市府每年将多出1.5亿加元左右的开销。素里居民担心成立全新的警务服务是否会给纳税人带来更多的经济压力？而未来新的警力能否满足本地需求还是未知数。</p>
 <p>素里一个团体的成员参加了贸易委员会会议，他们期望保留加拿大骑警。该团体的一名女士说：“素里的纳税人希望（省府）听到他们的声音。如果你不能帮助我们，那么谁可以？”</p>
 <p>2月14日，该团体的请愿者向加拿大内阁办公室交付了40个装有签名请愿书的信箱，希望保留加拿大骑警。该团体为了保住骑警，目标是总共收集50,000个签名。去年6月，素里市从加拿大骑警向市级警力转换的正式计划出台后，不少居民因市府举办的公众咨询活动缺乏透明度而恼火，并开始提出请愿，反对设立市警察局。请愿书称：“我相信加拿大骑警素里支队的成员和工作人员一直致力于保障这个社区的安全。我相信尽管相对对于（素里）人口来说，骑警存在人手不足的问题，但尽管如此，他们仍然做得很好。 此外，当许多人已经在为置家而辛苦努力时，实施一支全新警力的费用在财政上是不负责任的。”反对成立市警的居民指出，那些认为成立不同的警察部队就可以阻止帮派暴力的想法是天真的。</p>
 <p>不过上周公布的一项民意调查显示，素里的大多数选民愿投票支持设立市警。去年4月，该市获得了省政府的批准，以市警察局取代骑警。素里市长道格．麦卡勒姆（Doug McCallum）希望新的市政警队将于明年开始运作。◇</p>
@@ -17,42 +17,48 @@
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/2/27/n11899859.htm">成本未定 素里警局过渡或延迟</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/18/6/5/n10457052.htm">大学学习：做好这九步 成功完成作业（三）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/5/29/n10437043.htm">大学学习：做好这九步 成功完成作业（二）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/5/23/n10419796.htm">大学学习：做好这九步 成功完成作业（一）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/3/9/n10203031.htm">12年级毕业成为大一新生 你要注意什么</a></li>
-> <li><a href="https://www.epochtimes.com/gb/17/5/15/n9146146.htm">英国大学考试季“驾到” 考前冲刺有妙招</a></li>
-> <li><a href="https://www.epochtimes.com/gb/17/1/19/n8721729.htm">写作关联力：品格篮球队</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/10/20/n8414529.htm">大学生活宝鉴（8）：大学生必备技能 如何做阅读笔记</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/10/5/n8368603.htm">大学生活宝鉴（7）：大学生阅读学术论文的必备技能</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/8/23/n8229165.htm">大学生活宝鉴（5）：大学生如何管理学习压力</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/8/8/n8180536.htm">大学生活宝鉴（4）：如何应对小组作业中的偷懒者</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/24/n11890652.htm">【更新】武汉封城有漏 肺炎死多少？复工艰难</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/26/n11898505.htm">武汉解封3小时 知情人：有上千人进入长沙</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/26/n11898221.htm">【新闻看点】中共“大跃进”复工 美严阵以待</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/27/n11899028.htm">【翻墙必看】分析：武汉肺炎死了多少人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/17/n11875921.htm">蝗虫集体进攻 为何单单绕开他们</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/23/n11888879.htm">张天师治瘟疫的妙法</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869717.htm">【历史上的瘟疫】圣徒饱受迫害仍拯救罗马</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11886333.htm">纪实散文：中国封城下的民生面面观（上）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/24/n11891016.htm">【独家】山东内部文件：确诊数是公布的数倍</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/25/n11893784.htm">【十字路口】病人未死被火化 武汉解封曝权斗</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/25/n11893837.htm">【翻墙必看】性服务或是浙江监狱染瘟疫的原因</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/26/n11898221.htm">【新闻看点】中共“大跃进”复工 美严阵以待</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/26/n11896446.htm">【拍案惊奇】美为爆发准备 武汉P4内有何毒物</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11880656.htm">【三国英雄14】曹操如何对待背叛自己的人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/24/n11893023.htm">疫情下转移焦点？“军中妖姬”汤灿高调直播</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/24/n11893329.htm">武汉封城深夜传凄厉吼叫 台艺人：地狱的声音</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/26/n11897251.htm">刘真脸书更新贴文 粉丝关注留言打气</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/25/n11895011.htm">殷琦夫婿公司投入“制罩队” 暖曝：台湾需要</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/26/n11898270.htm">疫情下的影视圈 制片人每天睁眼就计算损失</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/hjtdvm325/djy/blob/master/gb/21/2/26/n12776250.md#1">卑诗省府审查JIBC培训中共警察项目</a></li>
+<li><a href="https://github.com/hjtdvm325/djy/blob/master/gb/21/2/25/n12774359.md#1">滥用药物危机恶化 卑诗省府措施获差评</a></li>
+<li><a href="https://github.com/hjtdvm325/djy/blob/master/gb/21/2/25/n12774344.md#1">反口罩人士对抗零售店职员事件频发</a></li>
+<li><a href="https://github.com/hjtdvm325/djy/blob/master/gb/21/2/25/n12774333.md#1">警方跨省查封贩毒集团  缴获非法资产1100万元</a></li>
+<li><a href="https://github.com/hjtdvm325/djy/blob/master/gb/21/2/25/n12774301.md#1">空姐集体控告西捷航空 法官否决诉讼认证</a></li>
+<li><a href="https://github.com/hjtdvm325/djy/blob/master/gb/21/2/24/n12773150.md#1">温哥华市府取消在灰点社区建临时庇护所计划</a></li>
+<li><a href="https://github.com/hjtdvm325/djy/blob/master/gb/21/2/24/n12771819.md#1">新西敏公园爆性侵案</a></li>
+<li><a href="https://github.com/hjtdvm325/djy/blob/master/gb/21/2/24/n12771785.md#1">前教师暴尸温哥华岛 生前被控17项性侵罪</a></li>
+<li><a href="https://github.com/hjtdvm325/djy/blob/master/gb/21/2/24/n12771759.md#1">报告：温哥华房租上半年趋平稳 下半年将适度增长</a></li>
+<li><a href="https://github.com/hjtdvm325/djy/blob/master/gb/21/2/24/n12771639.md#1">素里兰里天车扩建资金悬而未决</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/kjrkiz2594/djy/blob/master/gb/20/2/27/n11899859.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kjrkiz2594/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kjrkiz2594/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/hjtdvm325/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/9/n11101863.md#1" target="_blank">【征文】章阁：中共设风水乱局 破坏北京古城</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/29/n11417416.md#1" target="_blank">美大使发推特 谴责中共迫害法轮功</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/hjtdvm325/djy/blob/master/gb/21/2/22/n12767168.md#1">辛丑八卦2021年两岸国运</a></li>
+<li><a href="https://github.com/hjtdvm325/djy/blob/master/gb/21/2/19/n12762219.md#1">解密文件：美CIA或观察到火星上的古代人类</a></li>
+<li><a href="https://github.com/hjtdvm325/djy/blob/master/gb/20/12/30/n12653772.md#1">【命理】相士算他活不过30岁 为何不应验？</a></li>
+<li><a href="https://github.com/hjtdvm325/djy/blob/master/gb/21/2/21/n12765804.md#1">预言中的大瘟疫和中国变局</a></li>
+<li><a href="https://github.com/hjtdvm325/djy/blob/master/gb/21/2/10/n12744730.md#1">预言试析（8）上海的命运和抉择</a></li>
+<li><a href="https://github.com/hjtdvm325/djy/blob/master/gb/21/2/25/n12773336.md#1">【时事纵横】习2021凶险？蓬佩奥打中共七寸</a></li>
+<li><a href="https://github.com/hjtdvm325/djy/blob/master/gb/21/2/25/n12775088.md#1">【财商天下】东北人口危机 全国爆发前兆？</a></li>
+<li><a href="https://github.com/hjtdvm325/djy/blob/master/gb/21/2/25/n12775599.md#1">【秦鹏直播】习近平一句话让富人不寒而栗</a></li>
+<li><a href="https://github.com/hjtdvm325/djy/blob/master/gb/21/2/23/n12770771.md#1">中国人寿贪腐严重 女员工举报遭报复</a></li>
+<li><a href="https://github.com/hjtdvm325/djy/blob/master/gb/21/2/23/n12770213.md#1">贾庆林家族腐败内幕再被摆上台面</a></li>
+<li><a href="https://github.com/hjtdvm325/djy/blob/master/gb/21/2/24/n12772903.md#1">大陆“会计所一哥”濒临倒闭 人去楼空</a></li>
+<li><a href="https://github.com/hjtdvm325/djy/blob/master/gb/21/2/23/n12768556.md#1">被拍到与冯绍峰游三亚 赵丽颖高情商称呼婆婆</a></li>
+<li><a href="https://github.com/hjtdvm325/djy/blob/master/gb/21/2/23/n12769489.md#1">林志玲夫妇首度合体代言 AKIRA全程中文应答</a></li>
+<li><a href="https://github.com/hjtdvm325/djy/blob/master/gb/21/2/23/n12769457.md#1">Janet速产二胎不到3小时“来不及打无痛分娩”</a></li>
+<li><a href="https://github.com/hjtdvm325/djy/blob/master/gb/21/2/23/n12769225.md#1">演艺圈收入骤减 贺一航之子曾治豪到餐厅实习</a></li>
+<li><a href="https://github.com/hjtdvm325/djy/blob/master/gb/21/2/24/n12773132.md#1">孙俪获好友赠二手童装 小花真实反应感动网友</a></li>
+<li><a href="https://github.com/hjtdvm325/djy/blob/master/gb/21/2/23/n12769229.md#1">俄罗斯奇特的自然景观──“贝加尔湖禅”</a></li>
+<li><a href="https://github.com/hjtdvm325/djy/blob/master/gb/21/2/23/n12768699.md#1">缺乏维生素D易感染新冠 1招补充最快</a></li>
+<li><a href="https://github.com/hjtdvm325/djy/blob/master/gb/21/2/24/n12772677.md#1">9种食物是“天然肠胃药” 改善胃食道逆流</a></li>
+<li><a href="https://github.com/hjtdvm325/djy/blob/master/gb/21/2/19/n12762302.md#1">偏头痛有哪些前兆？有时像中风 掌握1方法防发作</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hjtdvm325/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hjtdvm325/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/2/27/n11899859.htm">成本未定 素里警局过渡或延迟</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hjtdvm325/djy/blob/master/gb/20/2/27/n11899859.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hjtdvm325/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hjtdvm325/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hjtdvm325/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hjtdvm325/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hjtdvm325/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hjtdvm325/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hjtdvm325/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hjtdvm325/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hjtdvm325/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hjtdvm325/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hjtdvm325/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hjtdvm325/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hjtdvm325/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hjtdvm325/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hjtdvm325/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hjtdvm325/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hjtdvm325/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hjtdvm325/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/hjtdvm325/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hjtdvm325/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hjtdvm325/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hjtdvm325/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hjtdvm325/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hjtdvm325/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/hjtdvm325/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hjtdvm325/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hjtdvm325/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hjtdvm325/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hjtdvm325/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hjtdvm325/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hjtdvm325/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hjtdvm325/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hjtdvm325/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hjtdvm325/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hjtdvm325/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hjtdvm325/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hjtdvm325/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hjtdvm325/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hjtdvm325/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hjtdvm325/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hjtdvm325/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hjtdvm325/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hjtdvm325/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hjtdvm325/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hjtdvm325/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hjtdvm325/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hjtdvm325/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hjtdvm325/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
